# LivingObjects2

./: .clang-format  .gitignore  CMakeLists.txt  PRE_COMMIT_HOOK.md  class-dependency-analysis.md  cpp-vm-implementation-plan.md
src/: array.cpp  array.hpp  byte_array.hpp  compiled_method.cpp  compiled_method.hpp  tagged_value.cpp  tagged_value.hpp
src/classes/: README.md  array.hpp  byte_array.cpp  byte_array.hpp  compiled_method.cpp  compiled_method.hpp  context.cpp  context.hpp  mirror.hpp
src/runtime/: array.cpp  array.hpp  byte_array.cpp  byte_array.hpp
tests/bytecode/: README.md  TESTS_TO_RESTORE.txt  TEST_SETUP.md  bytecode_instructions_test.cpp  bytecode_test_helpers.cpp  bytecode_test_helpers.hpp  test_stubs.hpp  vm_test_types.cpp  vm_test_types.hpp
tests/unit/: tagged_value_test.cpp
tools/: check_mirror_layout.py
